tests/frontend/fail/array/array_aliasing.act
constructor of A
interface constructor()

creates
  uint[2][2] x := [[0,0],[0,0]]

behaviour f of A
interface f()

storage

  x => [[1,2],[3,4]]
  x[0] => [10,20]
